# backend

./: .dockerignore  .env.template  .env.test  .flake8  .gitignore  APIRouter.py  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  main.py  pom.xml  pyproject.toml  pytest.ini  settings.py
.github/workflows/: quality.yml  tests.yml
alembic/: env.py
alembic/versions/: 1f9c0083ab8f_update_category_table.py  26b9a7650278_replace_relationship_between_files_and_.py  4d17daf47b75_insert_admin_user.py  5a1f8c810407_create_article_table.py  71e44bc25879_add_category_cascade_article_id_cascade_.py  c110639c4e7a_add_username_and_delete_image_url_for_.py  cd2e04c13784_add_file_table.py  ed8fe8286e15_create_category_table.py  f4f45c7cf721_add_user_table_and_relationship_between_.py
auth/: auth_backend.py  auth_router.py  strategy.py  user_manager.py
config/: log_config.py
controller/: article_controller.py  category_controller.py  file_controller.py  health_check_controller.py  user_controller.py
db/: session.py
dependencies/: article_dependencies.py  category_dependencies.py  file_dependencies.py  role_dependencies.py
dto/: article_dto.py  category_dto.py  file_dto.py  user_dto.py
enums/: role.py
exception/: article_not_found_exception.py  category_not_found_exception.py  entity_not_found_exception.py  file_not_found_exception.py  not_enough_permission_exception.py
mapper/: article_mapper.py  category_mapper.py  file_mapper.py
metrics/: custom_metrics.py
model/: article.py  article_to_category.py  article_to_file.py  base.py  category.py  file.py  user.py
repository/: abstract_repository.py  article_repository.py  category_repository.py  crud_base_repository.py  file_repository.py  user_repository.py
script/: create_admin.py
script/test/: run_integration_tests.sh  run_unit_tests.sh
service/: article_service.py  category_service.py  file_service.py
src/main/resources/: application.properties  application.yml
tests/: conftest.py
tests/core/data/: fake_data_factory.py
tests/core/utils/: logger.py
tests/integration/: conftest.py
tests/integration/fixtures/: db.py  minio.py  (+2 more)
tests/unit/: conftest.py
utils/: logger.py
(+86 files in other folders)
